# zeppelin

./: .gitignore  CMakeLists.txt  README.md  bitbrd.c  cli.c  debug.c  dump.c  game.c  log.c  magics.json  main.c  main.h  makerelease.sh  meson.build  movegen.c  precomp.c  uci.c  utils.c
res/: nnue_shape.h
src/: debug.c  dump.c  eval.c  game.c  main.c  main.h  main.h.gch  movegen.c  nnue.c  perft.c  precomp.c  search.c  settings.h  time.c  uci.c  zobrist.c
src/core/: bitboard.h  game.c  game.h  hash.c  hash.h  move.h  movegen.c  movegen.h  movelist.h  piece.h  precomp.c  precomp.h  timemanage.c  timemanage.h
src/eval/: eval.c  eval.h  nnue.c  nnue.h
src/iface/: debug.c  iface.h  uci.c
src/search/: history.c  history.h  killer.c  killer.h  negamax.c  negamax.h  order.c  order.h  perft.c  perft.h  quiescence.c  quiescence.h  search.c  search.h  tt.c  tt.h
src/utils/: cmputils.h  strutils.h  timeutils.h
test/: Engine.py  Test.py  engine.py  evalchecks.py  fenchecks.py  makemovechecks.py  perftchecks.py  run_tests.py  test.py  unmakemovechecks.py
tools/: Engine.py  FEN.py  NNUE.py  Paths.py  Test.py  Zeppelin.py  extract_nnue_params.py  magics.json  magics.pkl  precomp.py  requirements.txt  run_evals_generation.py  run_learing.py  run_nnue_trainer.py  run_tests.py  train.sh
